# production-email-agent

./: .dockerignore  .env.example  .gitignore  CRITICAL_FIX_APPLIED.md  DEPLOYMENT_PROJECT_UNDERSTANDING.md  DEPLOYMENT_TASKS.md  Dockerfile  LICENSE  QUICK_DEPLOY.md  README.md  RENDER_DEPLOYMENT_GUIDE.md  RENDER_DEPLOYMENT_SETUP.md  RENDER_TIMEOUT_TROUBLESHOOTING.md  REST_API_WORKFLOW_TESTING_GUIDE.md  docker-compose.yml  implementation_summary.md  pyproject.toml  render.yaml  requirements.txt  understand-agent-workflow-with-memory.md  workflow.md
.github/: copilot-instructions.md
.github/workflows/: deploy.yml
src/: evaluation.py
src/email_assistant/: __init__.py  agent.py  agent_hitl.py  agent_tools.py  main.py  prompts.py  schemas.py  utils.py
src/email_assistant/tools/: __init__.py
src/email_assistant/tools/default/: __init__.py
tests/: test_email_assistant.py  test_langsmith_evaluation.py
